[package]
name = "sonic-sage"
version = "0.1.0"
description = "Prediction market program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sonic_sage"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
# anchor-spl = "0.31.0"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
# solana-program = "< 2.0.0"
# solana-program = "=1.18.23"
pyth-solana-receiver-sdk ="0.5.0"
# pythnet-sdk = "=2.1.0"
pyth-sdk-solana = "0.10.4"

# [patch.crates-io]
# solana-program = { version = "< 2.0", optional = false }